// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AutocompleteUtil > getDirectorySuggestions > provides relevant directories when given a real path 1`] = `
[
  {
    "actual": "r/",
    "visual": "bar/",
  },
]
`;

exports[`AutocompleteUtil > getFileAndDirectorySuggestions > provides relevant files and directories when given a real path 1`] = `
[
  {
    "actual": "r/",
    "visual": "bar/",
  },
  {
    "actual": "zzing.gaz ",
    "visual": "bazzing.gaz ",
  },
]
`;

exports[`AutocompleteUtil > getFileSuggestions > provides relevant files when given a real path 1`] = `
[
  {
    "actual": "zzing.gaz ",
    "visual": "bazzing.gaz ",
  },
]
`;
